--- a/style.css
+++ b/style.css
@@ -74,6 +74,6 @@ h1{
 
 @font-face {
     font-family: pix;
-    src: url("summer-pixel-22-font/SummerPixel22Regular-jE0W7.ttf") format('truetype');
+    src: url("summer-pixel-22-font/SummerPixel22Regular-jE0W7.ttf") format("truetype");
 
 }
